--- a/src/utils/vars.scss
+++ b/src/utils/vars.scss
@@ -2,6 +2,7 @@
 $screen-xs-max: 767px;
 $screen-sm-min: 768px;
 $screen-filter-xs-max: 893px;
+$screen-filter-sm-min: 894px;
 $screen-sm-max: 991px;
 $screen-md-min: 992px;
 $screen-md-max: 1199px;
